--- a/static/styles/media/cadastramento-media.css
+++ b/static/styles/media/cadastramento-media.css
@@ -1,3 +1,4 @@
+/* Media para telas de smartphones */
 @media (max-width: 576px) {
 
 
@@ -24,6 +25,7 @@
 
 }
 
+/* Media para telas de Tablets */
 @media (max-width: 768px) {
 
 
@@ -50,6 +52,7 @@
 
 }
 
+/* Media para telas de Tablets */
 @media (max-width: 1200px) {
 
 
@@ -63,6 +66,29 @@
 
     .form_container {
         width: 45rem;
+        padding: 1.5rem;
+        
+    }
+
+}
+
+/* Media para tela do tamanho Desktop */
+@media (min-width: 1440px){
+
+    .container-cadastramento{
+        gap: 40rem;
+    }
+
+    .cadastramento-titulo span{
+        font-size: 3.5rem;
+    }   
+    
+    .container-img {
+        height: 22.5rem;
+    }
+
+    .form_container {
+        width: 40rem;
         padding: 1.5rem;
         
     }
