--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -1,96 +1,100 @@
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 700;
-    list-style: none;
-    font-size: 1rem;
-    text-decoration: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 700;
+  list-style: none;
+  font-size: 1rem;
+  text-decoration: none;
 }
-
 
 /* ****************************** padronização/ estilização MENU ************************************ */
 
-
+/* Estilização do cabeçalho */
 .header-container{
-  width: 100vw;
-  height: 10vh;
-  background-color: #f4f4f4;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #E8D3B6;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  
+width: 100vw;
+height: 10vh;
+background-color: var(--cor-header);
+display: flex;
+justify-content: space-between;
+align-items: center;
+position: fixed;
+left: 0;
+top: 0;
+z-index: 1;
 }
 
+/* Estilização da imagem do logo */
 .header-container img{
-  max-width: 6rem;
-  max-height: 8rem;
-  border-radius: 100%;
+max-width: 6rem;
+max-height: 8rem;
+border-radius: 100%;
 }
 
+/* Estilização do botão de dropdown */
 .dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    border-radius: 2rem;
-    cursor: pointer;
-    margin-right: 10rem;
-  }
-  
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    margin-right: 6rem;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown a:hover {background-color: #ddd;}
-  
-  .show {
-    display: block;
-    
-  }
+  background-color: var(--cor-dpop-btn);
+  color: var(--cor-padrao-letras);
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 2rem;
+  cursor: pointer;
+  margin-right: 10rem;
+}
 
+.dropbtn:hover, .dropbtn:focus {
+  background-color:var(--cor-dpop-btn);
+}
 
-/* ****************************** padronização/ estilização RODAPÉ ************************************ */
+/* Estilização do container do dropdown */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Estilização do conteúdo do dropdown */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  margin-right: 6rem;
+}
+
+/* Estilização dos links dentro do dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Efeito de hover nos links do dropdown */
+.dropdown a:hover {background-color: #ddd;}
+
+/* Classe para exibir o dropdown */
+.show {
+  display: block;
+}
+
+/* ****************************** Padronização/ estilização RODAPÉ ************************************ */
+
+/* Estilização do rodapé */
 footer{
-    width: 100vw;
-    height: 7vh;
-    background-color: #000000;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    color: #ffffff;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  height: 7vh;
+  background-color: var(--cor-footer);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  color: var(--cor-padrao-letras);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
