--- a/static/styles/pagina-inicial.css
+++ b/static/styles/pagina-inicial.css
@@ -3,12 +3,10 @@ body, html {
   padding: 0;
   height: 100vh;
   font-family: Arial, sans-serif;
-  
-  
 }
 
 .container-geral{
-  background: linear-gradient(#f4f4f4, #f4f4f4, #004aad, #000000);
+  background: var(--cor-pagina-inicial);
 }
 
 .container-principal{
@@ -28,20 +26,20 @@ body, html {
 
 .titulo-destaque .part1 {
   font-size: 3.5rem;
-  color: #6a00c2;
+  color: var(--cor-titulo1-pgInicial);
   margin-right: 5px;
   opacity: 0.7;
 }
 
 .titulo-destaque .part2 {
   font-size: 3.5rem;
-  color: #0071c2;
+  color: var(--cor-titulo2-pgInicial);
 }
 
 .container-grid {
   width: 20rem;
   height: 16rem;
-  background: linear-gradient(to bottom right, #a77aff, #65a3ff);
+  background: var(--cor-icone-pgInicial);
   filter: blur(3rem);
   margin-bottom: 5rem;
   border-radius: 2.5rem;
@@ -96,8 +94,6 @@ body, html {
   width: 70%;
   /*COR DE FUNDO DO CARD*/
   height: 130%;
-  /*COR DA FONTE*/
-  color: black;
   /*CENTRALIZA O TEXTO*/
   border-radius: 1rem;
   /*SUAVIZAR EFEITO DA TRANSIÇÃO*/
@@ -137,7 +133,7 @@ body, html {
 .servicos:hover .descricao{
   /*FAZ IR PARA O TOPO QUANDO O MOUSE PASSAR EM CIMA*/
   top: 0;
-  background-color:  rgba(83, 103, 156, 0.292);
+  background-color: var(--cor-servicos-hover);
   /*AUMENTAR O TAMANHO DA IMAGEM*/
   transform: scale(1.1);
   width: 100%;
@@ -147,7 +143,7 @@ body, html {
   font-family: 'Courier New', Courier, monospace;
   /*DEFINE O TAMANHO DA FONTE*/
   font-size: 2rem;
-  color: white;
+  color: var(--cor-padrao-letras);
   margin-top: 0.5rem;
  
 }
@@ -162,7 +158,7 @@ body, html {
   cursor: pointer;
   background-color: transparent;
   border: 0.1rem solid #fff;
-  color: #fff;
+  color: var(--cor-padrao-letras);
   /*TRANSFORMA O TEXTO EM LETRA MAÍUSCULA*/
   text-transform: uppercase;
   border-radius: 2.5rem;
@@ -188,7 +184,7 @@ body, html {
 }
 
 .mensagem h2{
-  color: white;
+  color:var(--cor-padrao-letras);
   font-size: 50;
 }
 
@@ -198,8 +194,8 @@ body, html {
   margin-top: 3rem;
   text-align: center;
   border-radius: 2rem;
-  background-color:#87b7ff ;
-  color: #fff;
+  background-color:var(--cor-card-mensagem);
+  color: var(--cor-padrao-letras);
 }
 
 
