--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,58 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LogClass</title>
-     <!-- importando o arquivo css da página -->
-     <link rel="stylesheet" href="/static/styles/layout.css">
-     <link rel="stylesheet" href="/static//menu-home/menu-home.css">
-     <link rel="stylesheet" href="/static/styles/media/menu-home-media.css">
+    <!-- Importando o arquivo css da página -->
+    <link rel="stylesheet" href="/static/styles/layout.css">
+    <link rel="stylesheet" href="/static//menu-home/menu-home.css">
+    <link rel="stylesheet" href="/static/styles/media/menu-home-media.css">
+    <link rel="stylesheet" href="/static/styles/variaveis.css">
 
+    <script src="/static/js/menu.js" defer></script>
 
-     <script src="/static/js/menu.js" defer></script>
+    {% block css %}
+    {% endblock %}
 
-
-     {% block css %}
-     {% endblock %}
-
-     <!-- importanto os ícones do bootstrap -->
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Importando os ícones do bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 
-    <!-- Cabeçalho -->
+    <!-- Início do Cabeçalho -->
     <header>
 
+        <!-- Início da Seção do cabeçalho -->
         <section class="header-container">
 
+            <!-- Imagem e logo da empresa -->
             <figure>
                 <img src="/static/img/Blue Modern Shipping Package Box Logo.svg" alt="logo">
+                <!-- <figcaption>Logo da LogClass</figcaption> -->
             </figure>
     
-            <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Menu</button>
-                <div id="myDropdown" class="dropdown-content">
-                  <a href="/">Home</a>
-                  <a href="/login">Conecte-se</a>
-                  <a href="/cadastramento">Cadastramento</a>
-                  <a href="/rnc">RNC</a>
-                  <a href="/picking">Cadastro de Picking</a>
-                  <a href="/estoque">Controle de Estoque</a>
-                  <a href="/pop">POP</a>
-                  <a href="/expedicao">Cadastro de Expedição</a>
-                </div>
-              </div>
+            <!-- Início da navegação principal -->
+            <nav>
+                <!-- Início do menu dropdown -->
+                <div class="dropdown">
+                    <button onclick="myFunction()" class="dropbtn">Menu</button>
+                    <div id="myDropdown" class="dropdown-content">
+                      <a href="/">Home</a>
+                      <a href="/login">Conecte-se</a>
+                      <a href="/cadastramento">Cadastramento</a>
+                      <a href="/rnc">RNC</a>
+                      <a href="/picking">Cadastro de Picking</a>
+                      <a href="/estoque">Controle de Estoque</a>
+                      <a href="/pop">POP</a>
+                      <a href="/expedicao">Cadastro de Expedição</a>
+                    </div>
+                  </div>
+                <!-- Fim do menu dropdown -->
+            </nav>
+            <!-- Fim da navegação principal -->
 
         </section>
-        
+        <!-- Fim da Seção do cabeçalho -->
 
     </header>
+    <!-- Fim do Cabeçalho -->
 
+    <!-- Bloco de conteúdo dinâmico -->
     {% block conteudo %}
     {% endblock %}
     
-    <!-- rodapé -->
+    <!-- Início do rodapé -->
     <footer>
         <p>&copy; 2024 LogClass Sistema Educacional</p>
     </footer>
-    
+    <!-- Fim do rodapé -->
+
 </body>
 </html>
