--- a/templates/login.html
+++ b/templates/login.html
@@ -29,10 +29,11 @@
 
     <div class="register-box" id="register-aluno" style="display: none;">
         <h2>Cadastro do Aluno</h2>
-        <form>
-            <input type="text" placeholder="Nome Completo" required>
-            <input type="email" placeholder="E-mail" required>
-            <input type="password" placeholder="Senha" required>
+        <form action="/login" method="POST">
+            <input type="hidden" value="Aluno" name="tipo">
+            <input type="text" placeholder="Nome Completo" required name="nome">
+            <input type="email" placeholder="E-mail" required name="email">
+            <input type="password" placeholder="Senha" required name="senha">
             <input list="browsers" name="turma" placeholder="Turma">
             <datalist id="browsers">
             <option value="turma1"></option>
@@ -46,10 +47,11 @@
 
     <div class="register-box" id="register-professor" style="display: none;">
         <h2>Cadastro do Professor</h2>
-        <form>
-            <input type="text" placeholder="Nome Completo" required>
-            <input type="email" placeholder="E-mail" required>
-            <input type="password" placeholder="Código de Acesso" required>
+        <form action="/login" method="POST">
+            <input type="hidden" value="Professor" name="tipo">
+            <input type="text" placeholder="Nome Completo" required name="nome">
+            <input type="email" placeholder="E-mail" required name="email">
+            <input type="password" placeholder="Código de Acesso" required name="senha">
             <button type="submit">IR</button>
             <a href="#" id="voltar-register" class="voltar-btn">VOLTAR</a>
         </form>
@@ -67,9 +69,16 @@
     
     <div class="login-box" id="login-aluno" style="display: none;">
         <h2>Login do Aluno</h2>
-        <form>
-            <input type="email" placeholder="E-mail" required>
-            <input type="password" placeholder="Senha" required>
+        <form action="/login" method="POST">
+            <input type="hidden" value="LoginAluno" name="tipo">
+            <input type="email" placeholder="E-mail" required name="email">
+            <input type="password" placeholder="Senha" required name="senha">
+            <input list="browsers" name="turma" placeholder="Turma">
+            <datalist id="browsers">
+            <option value="turma1"></option>
+            <option value="turma2"></option>
+            <option value="turma3"></option>
+            </datalist>
             <button type="submit">IR</button>
             <a href="#" id="voltar-login" class="voltar-btn">VOLTAR</a>
         </form>
@@ -77,9 +86,10 @@
 
     <div class="login-box" id="login-professor" style="display: none;">
         <h2>Login do Professor</h2>
-        <form>
-            <input type="email" placeholder="E-mail" required>
-            <input type="password" placeholder="Código de Acesso" required>
+        <form action="/login" method="POST">
+            <input type="hidden" value="LoginProfessor" name="tipo">
+            <input type="email" placeholder="E-mail" required name="email">
+            <input type="password" placeholder="Código de Acesso" required name="senha">
             <button type="submit">IR</button>
             <a href="#" id="voltar-login" class="voltar-btn">VOLTAR</a>
         </form>
