--- a/templates/cadastramento.html
+++ b/templates/cadastramento.html
@@ -2,6 +2,7 @@
 {% block css %}
 <link rel="stylesheet" href="/static/styles/cadastramento.css">
 <link rel="stylesheet" href="/static/styles/media/cadastramento-media.css">
+<link rel="stylesheet" href="/static/styles/variaveis.css">
 {% endblock %}
 
 {% extends "layout.html" %}
