--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -11,7 +11,7 @@
 <section class="container-geral">
 
     <!-- Início da seção principal -->
-    <section class="container-principal">
+    <div class="container-principal">
 
         <!-- Título da página -->
         <div class="titulo-destaque">
@@ -21,11 +21,11 @@
 
         <div class="container-grid"></div>
     
-    </section>
+    </div>
     <!-- Fim da seção principal -->
     
     <!-- Início da seção de cards -->
-    <section class="container-cards">
+    <div class="container-cards">
         <div class="c-galeria">
 
             <!-- Card: Processo de cadastramento -->
@@ -108,11 +108,11 @@
             </div>
 
         </div>  
-    </section>
+    </div>
     <!-- Fim da seção de cards -->
 
     <!-- Início da seção de mensagem do professor -->
-    <section class="container-mensagem_professor">
+    <div class="container-mensagem_professor">
 
         <div class="mensagem">
             <h2> Mensagem do Professor </h2>
@@ -120,7 +120,7 @@
             <input type="text" placeholder="Mensagem do Professor" class="input-field">
         </div>
 
-    </section>
+    </div>
     <!-- Fim da seção de mensagem do professor -->
 
 </section>
