--- a/templates/picking.html
+++ b/templates/picking.html
@@ -2,6 +2,7 @@
 {% block css %}
 <link rel="stylesheet" href="/static/styles/picking.css">
 <link rel="stylesheet" href="/static/styles/media/picking-media.css">
+<link rel="stylesheet" href="/static/styles/variaveis.css">
 
 {% endblock %}
 
@@ -14,17 +15,17 @@
 
 <section class="geral-cadastramento">
 
-    <section class="container-cadastramento">
+    <div class="container-cadastramento">
 
         <div class="cadastramento-titulo">
             <span class="cadastramento1"> PICKING </span>
         </div>
 
         <div class="container-img"></div>
-    </section>
+    </div>
 
 
-    <section class="formulario">
+    <div class="formulario">
 
         <div class="form_container">
 
@@ -72,7 +73,7 @@
             </form>
         </div>
 
-    </section>
+    </div>
     
 </section>
 
