--- a/templates/rnc.html
+++ b/templates/rnc.html
@@ -2,6 +2,7 @@
 {% block css %}
 <link rel="stylesheet" href="/static/styles/rnc.css">
 <link rel="stylesheet" href="/static/styles/media/rnc-media.css">
+<link rel="stylesheet" href="/static/styles/variaveis.css">
 
 {% endblock %}
 
@@ -15,17 +16,17 @@
 
 <section class="geral-cadastramento">
 
-    <section class="container-cadastramento">
+    <div class="container-cadastramento">
 
         <div class="cadastramento-titulo">
             <span class="cadastramento1"> RNC </span>
         </div>
 
         <div class="container-img"></div>
-    </section>
+    </div>
 
 
-    <section class="formulario">
+    <div class="formulario">
 
         <div class="form_container">
 
@@ -58,7 +59,7 @@
             </form>
         </div>
 
-    </section>
+    </div>
     
 </section>
 
