--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -2,97 +2,96 @@ body {
     margin: 0;
     padding: 0;
     background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(53,51,205,1) 100%);
+    background: var( --cor-fundo-login);
     font-family: Arial, sans-serif;
-    color: #fff;
+    color: var(--cor-padrao-letras);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
-.container {
+.container-bem-vindo {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    gap: 20px;
+    gap: 4rem;
     flex-wrap: wrap;
 }
 
-.header, .login-prompt {
-    height: 350px;
+.inicio-bem-vindo, .login-prompt {
+    height: 23rem;
     text-align: center;
-    padding: 20px;
-    border-radius: 10px;
-    width: 300px;
-    background: rgb(0,74,173);
-    background: radial-gradient(circle, rgba(0,74,173,1) 0%, rgba(60,39,98,1) 100%);
+    padding: 1.5rem;
+    border-radius: 1rem;
+    width: 20rem;
+    background: var(--cor-cards-pgLogin);
 }
 
-.header h2 {
-    margin-top: 26px;
-    font-size: 24px;
-    color: #fff;
+.inicio-bem-vindo h2 {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+    color:var(--cor-padrao-letras);
 }
 
 .login-prompt h3 {
-    margin-top: 35px;
-    font-size: 25px;
-    color: #fff;
+    margin-top: 2rem;
+    font-size: 1.5rem;
+    color:var(--cor-padrao-letras);
 }
 
 .signup-btn, .login-btn {
-    padding: 10px 20px;
+    padding: 1rem 2rem;
     border: none;
-    border-radius: 5px;
-    background-color: #0368D4;
-    color: #fff;
+    border-radius: 0.5rem;
+    background-color: var(--cor-btns);
+    color: var(--cor-padrao-letras);
     font-weight: bold;
     cursor: pointer;
-    height: 65px;
+    height: 4.5rem;
     width: 70%;
 }
 
 .signup-btn {
-    margin-top: 40px;
+    margin-top: 2rem;
 }
 
 .register-box, .connect-box {
-    background: rgb(0,74,173);
-    background: radial-gradient(circle, rgba(0,74,173,1) 0%, rgba(60,39,98,1) 100%);
-    border-radius: 10px;
-    padding: 30px;
-    width: 300px;
+    background: var(--cor-fundo-inputs);
+    background: var(--cor-cards-pgLogin);
+    border-radius: 1rem;
+    padding: 3rem;
+    width: 3rem;
     text-align: center;
 }
 
 .register-box h2, .connect-box h2 {
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
     font-weight: bold;
 }
 
 form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
 }
 
 input {
-    padding: 10px;
+    padding: 1rem;
     width: 97%;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     outline: none;
-    background-color: #003772;
-    color: #fff;
+    background-color: var(--cor-fundo-inputs);
+    color: var(--cor-padrao-letras);
 }
 
 button[type="submit"] {
-    padding: 10px;
+    padding: 1rem;
     border: none;
-    border-radius: 5px;
-    background-color: #0368D4;
-    color: #fff;
+    border-radius: 0.5rem;
+    background-color: var(--cor-btns);
+    color: var(--cor-padrao-letras);
     font-weight: bold;
     cursor: pointer;
     width: 97%;
@@ -100,42 +99,41 @@ button[type="submit"] {
 
 .signup-link {
     display: block;
-    margin-top: 10px;
-    color: #0368D4;
+    margin-top: 1rem;
+    color: var(--cor-btns);
     text-decoration: none;
 }
 
 .account-type {
-    padding: 10px;
+    padding: 1rem;
     border: none;
-    border-radius: 5px;
-    background-color: #0368D4;
-    color: #fff;
+    border-radius: 0.5rem;
+    background-color: var(--cor-btns);
+    color: var(--cor-padrao-letras);
     font-weight: bold;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 1rem;
     cursor: pointer;
 }
 
 .select-menu {
     position: relative;
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
 }
 
 .select-btn {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    background-color: #003772;
+    padding: 1rem;
     color: #686868;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     width: 90%;
 }
 
 .select-btn i {
-    font-size: 15px;
+    font-size: 1.5rem;
     transition: 0.3s;
 }
 
@@ -150,10 +148,8 @@ button[type="submit"] {
     width: 80%;
     padding: 0;
     list-style: none;
-    background-color: #0b004d;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    max-height: 150px;
+    border-radius: 1.5rem;
+    max-height: 5rem;
     overflow-y: auto;
     display: none;
 }
@@ -164,7 +160,7 @@ button[type="submit"] {
 }
 
 .option {
-    padding: 10px;
+    padding: 1rem;
     cursor: pointer;
 }
 
@@ -173,20 +169,20 @@ button[type="submit"] {
 }
 
 .logo-image {
-    margin-top: 50px;
-    width: 200px; 
+    margin-top: 1.5rem;
+    width: 12rem; 
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 .login-btn {
-    background-color: #0368D4;
-    color: #fff;
-    padding: 10px;
+    background-color: var(--cor-btns);
+    color: var(--cor-padrao-letras);
+    padding: 1rem;
     border: none;
-    border-radius: 5px;
-    margin-top: 10px;
+    border-radius: 0.5rem;
+    margin-top: 2rem;
     font-weight: bold;
     cursor: pointer;
 }
@@ -199,75 +195,75 @@ button[type="submit"] {
 }
 
 #login-existente-box {
-    background: rgb(0,74,173);
-    background: radial-gradient(circle, rgba(0,74,173,1) 0%, rgba(60,39,98,1) 100%);
-    border-radius: 10px;
-    padding: 30px;
-    width: 300px;
+    background: var(--cor-btns);
+    background: var(--cor-cards-pgLogin);
+    border-radius: 1rem;
+    padding: 3rem;
+    width: 3rem;
     text-align: center;
     margin: 0 auto;
 }
 
 #login-existente-box h2 {
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
     font-weight: bold;
 }
 
 #login-existente-box form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1rem;
 }
 
 #email-login, #senha-login {
-    padding: 10px;
+    padding: 1rem;
     width: 90%;
     border: none;
-    border-radius: 5px;
+    border-radius: 1.5rem;
     outline: none;
-    background-color: #003772;
-    color: #fff;
+    background-color: var(--cor-fundo-inputs);
+    color: var(--cor-padrao-letras);
 }
 
 #login-existente-btn {
-    padding: 10px;
+    padding: 1rem;
     border: none;
-    border-radius: 5px;
-    background-color: #0368D4;
-    color: #fff;
+    border-radius: 1.5rem;
+    background-color: var(--cor-btns);
+    color: var(--cor-padrao-letras);
     font-weight: bold;
     cursor: pointer;
 }
 
 .signup-link {
     display: block;
-    margin-top: 10px;
-    color: #0368D4;
+    margin-top: 1rem;
+    color: var(--cor-btns);
 }
 
 .register-box, .login-box, .connect-box {
-    background: radial-gradient(circle, rgba(0,74,173,1) 0%, rgba(60,39,98,1) 100%);
-    border-radius: 10px;
-    padding: 30px;
-    width: 300px;
+    background: var(--cor-cards-pgLogin);
+    border-radius: 1rem;
+    padding: 1.5rem;
+    width: 20rem;
     text-align: center;
     display: none;
 }
 
 .connect-box h2, .login-box h2, .register-box h2 {
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
     font-weight: bold;
 }
 
 .voltar-btn {
     display: block;
     width: 97%;
-    padding: 10px;
-    margin-top: 3px; 
+    padding: 2rem;
+    margin-top: 0.5rem; 
     border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-weight: 5rem;
+    border-radius: 1.5rem;
+    color: var(--cor-padrao-letras);
+    font-weight: 1.5rem;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
