--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -1,6 +1,9 @@
 <!-- EXTENDENDO O CSS DA PAGINA PRINCIPAL (LAYOUT) -->
 {% block css %}
     <link rel="stylesheet" href="/static/styles/pagina-inicial.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Unlock&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% extends "layout.html" %}
