--- a/static/styles/pagina-inicial.css
+++ b/static/styles/pagina-inicial.css
@@ -27,15 +27,21 @@ body, html {
 }
 
 .titulo-destaque .part1 {
-  font-size: 3.5rem;
+  font-size: 5rem;
   color: #6a00c2;
   margin-right: 5px;
   opacity: 0.7;
+  font-family: "Unlock", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .titulo-destaque .part2 {
-  font-size: 3.5rem;
+  font-size: 5rem;
   color: #0071c2;
+  font-family: "Unlock", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .container-grid {
@@ -113,6 +119,7 @@ body, html {
   object-fit: cover;
   filter: brightness(80%);/*DEIXA A IMAGEM MAIS ESCURA, MAIS CINZA*/
   padding: 2rem;
+  border-radius: 5rem;
 }
 
 
