conclusão da RF006

--- a/templates/rnc.html
+++ b/templates/rnc.html
@@ -37,6 +37,9 @@
                 <!-- Campo "Número da RNC" -->
                 <input type="text" placeholder="Número da RNC" class="input-field" name="numRNC">
 
+                <!-- Campo "Número do Código do Produto" -->
+                <input type="text" placeholder="Código do Produto" class="input-field" name="codProd">
+
                 <!-- Campo "Local" -->
                 <input type="text" placeholder="Local" class="input-field" name="local">
 
