--- a/static/styles/pagina-inicial.css
+++ b/static/styles/pagina-inicial.css
@@ -27,7 +27,7 @@ body, html {
 }
 
 .titulo-destaque .part1 {
-  font-size: 5rem;
+  font-size: 7rem;
   color: #6a00c2;
   margin-right: 5px;
   opacity: 0.7;
@@ -37,7 +37,7 @@ body, html {
 }
 
 .titulo-destaque .part2 {
-  font-size: 5rem;
+  font-size: 7rem;
   color: #0071c2;
   font-family: "Unlock", serif;
   font-weight: 400;
@@ -82,7 +82,7 @@ body, html {
   flex: 2 5 10px;
   float: left;
   /*DEFINE A TRANSPARÊNCIA DO ELEMENTO*/
-  opacity: 1;
+  /* opacity: 1; */
   transition: 0.5s;
 }
 
@@ -105,7 +105,6 @@ body, html {
   /*COR DA FONTE*/
   color: black;
   /*CENTRALIZA O TEXTO*/
-  border-radius: 1rem;
   /*SUAVIZAR EFEITO DA TRANSIÇÃO*/
   transition: transform 0.5s;
   flex-direction: column;
@@ -118,15 +117,16 @@ body, html {
   height: 20rem;
   object-fit: cover;
   filter: brightness(80%);/*DEIXA A IMAGEM MAIS ESCURA, MAIS CINZA*/
-  padding: 2rem;
-  border-radius: 5rem;
+  padding: 0;
+
+  transition: transform 0.5s ease;
 }
 
 
 .servicos img:hover{
-  margin-top: 2rem;
   /*NOS PERMITE DAR O EFEITO DE ZOOM E OU PERSPECTIVA*/
   transform: scale(1.1);
+  filter: brightness(100%);
 }
 
 .descricao{
@@ -197,6 +197,9 @@ body, html {
 .mensagem h2{
   color: white;
   font-size: 50;
+  font-family: "Julius Sans One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .mensagem input{
@@ -205,10 +208,6 @@ body, html {
   margin-top: 3rem;
   text-align: center;
   border-radius: 2rem;
-  background-color:#87b7ff ;
-  color: #fff;
+  background-color:hsl(217, 100%, 90%) ;
+  color: #000000;
 }
-
-
-
-
