--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -25,79 +25,60 @@
         <div class="c-galeria">
 
             <div class="servicos">
-                <figure><img src="https://images.pexels.com/photos/6207369/pexels-photo-6207369.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Processo de cadastramento"></figure>
+                <figure><img src="/static/img/caixas.png" alt="Processo de cadastramento"></figure>
+                <a href="/cadastramento">
                 <div class="descricao">
-                    <h2> Processo de Cadastramento </h2>
-                    <br>
-                    <br>
-                    <div class="butn">
-                        <a href="/cadastramento">Acessar</a>
-                    </div>
+                    <img src="/static/img/caixa_cad.png" alt="">
                 </div>
+                </a>
             </div>
 
 
                 <div class="servicos">
-                    <figure><img src="https://images.pexels.com/photos/4506249/pexels-photo-4506249.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Não conformidade"></figure>
+                    <figure><img src="/static/img/caixas.png" alt="Não conformidade"></figure>
+                    <a href="/rnc">
                     <div class="descricao">
-                        <h2> Registro de<br> Não <br> conformidade<br>(RNC) </h2>
-                        <br>
-                        <br>
-                        <div class="butn">
-                            <a href="/rnc">Acessar</a>
-                        </div>
+                        <img src="/static/img/rnc.png" alt="">
                     </div>
+                    </a>
                 </div>
 
 
                 <div class="servicos">
-                    <figure><img src="https://images.pexels.com/photos/6169025/pexels-photo-6169025.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Picking"></figure>
+                    <figure><img src="/static/img/caixas.png" alt="Picking"></figure>
+                    <a href="/picking">
                     <div class="descricao">
-                        <h2>Cadastro de<br> PICKING</h2>
-                        <br>
-                        <br>
-                        <div class="butn">
-                            <a href="/picking">Acessar</a>
-                        </div>
+                        <img src="/static/img/picking.png" alt="">
                     </div>
+                    </a>
                 </div>
                 
         
                 <div class="servicos">
-                    <figure><img src="https://images.pexels.com/photos/4277794/pexels-photo-4277794.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2 alt="Estoque"></figure>
+                    <figure><img src="/static/img/caixas.png"></figure>
+                    <a href="/estoque">
                     <div class="descricao">
-                        <h2> Controle de Estoque  </h2>
-                        <br>
-                        <br>
-                        <div class="butn">
-                            <a href="/estoque">Acessar</a>
-                        </div>
+                        <img src="/static/img/estoque.png" alt="">
                     </div>
+                    </a>
                 </div>
 
                 <div class="servicos">
-                    <figure><img src="https://images.pexels.com/photos/6787050/pexels-photo-6787050.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="pop"></figure>
+                    <figure><img src="/static/img/caixas.png" alt="pop"></figure>
+                    <a href="/pop">
                     <div class="descricao">
-                        <h2> POP <br> (Procedimento operacional <br> padrão)  </h2>
-                        <br>
-                        <br>
-                        <div class="butn">
-                            <a href="/pop">Acessar</a>
-                        </div>
+                        <img src="/static/img/pop.png" alt="">
                     </div>
+                    </a>
                 </div>
 
                 <div class="servicos">
-                    <figure><img src="https://images.pexels.com/photos/6646863/pexels-photo-6646863.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="expedicao"></figure>
+                    <figure><img src="/static/img/caixas.png" alt="expedicao"></figure>
+                    <a href="/expedicao">
                     <div class="descricao">
-                        <h2> Cadastro de Expedição
-                        </h2>
-                        <br>
-                        <br>
-                        <div class="butn">
-                            <a href="/expedicao">Acessar</a>
-                        </div>
+                        <img src="/static/img/expedicao.png" alt="">
                     </div>
+                    </a>
                 </div>
 
      </div>  
