finalização RF007BACK

--- a/templates/picking.html
+++ b/templates/picking.html
@@ -29,11 +29,11 @@
 
         <div class="form_container">
 
-            <form action="/rnc" method="POST">
+            <form action="/picking" method="POST">
 
 
                 <!-- Campo "Código do Produto" -->
-                <input type="number" placeholder="Código do Produto" class="input-field" name="CodProd">
+                <input type="number" placeholder="Código do Produto" class="input-field" name="codProd">
 
                 <!-- Campo "Endereçamento" -->
                 <input type="text" placeholder="Endereçamento" class="input-field" name="enderecamento">
