--- a/templates/pop.html
+++ b/templates/pop.html
@@ -31,11 +31,11 @@
 
                     <input type="text" placeholder="Responsável:" class="input-field" name="resp_">
 
-                    <textarea placeholder="Material Necessário:" class="textarea-field"></textarea>
-                    <textarea placeholder="Passos Críticos:" class="textarea-field"></textarea>
-                    <textarea placeholder="Manuseio do Material:" class="textarea-field"></textarea>
-                    <textarea placeholder="Resultados esperados:" class="textarea-field"></textarea>
-                    <textarea placeholder="Ações Corretivas:" class="textarea-field"></textarea>
+                    <textarea placeholder="Material Necessário:" class="textarea-field" name="material"></textarea>
+                    <textarea placeholder="Passos Críticos:" class="textarea-field" name="passos"></textarea>
+                    <textarea placeholder="Manuseio do Material:" class="textarea-field" name="manuseio"></textarea>
+                    <textarea placeholder="Resultados esperados:" class="textarea-field" name="resultados"></textarea>
+                    <textarea placeholder="Ações Corretivas:" class="textarea-field" name="acoes"></textarea>
                 
                     <!-- Botão para enviar os dados para o Banco de Dados -->
                     <button class="submit-btn">Enviar</button>
