--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
 
             <!-- Imagem e logo da empresa -->
             <figure>
-                <img src="/static/img/Blue Modern Shipping Package Box Logo.svg" alt="logo">
+                <a href="/"><img src="/static/img/Blue Modern Shipping Package Box Logo.svg" alt="logo"></a>
                 <!-- <figcaption>Logo da LogClass</figcaption> -->
             </figure>
     
