--- a/templates/cadastramento.html
+++ b/templates/cadastramento.html
@@ -1,5 +1,6 @@
 <!-- EXTENDENDO O CSS DA PAGINA PRINCIPAL (LAYOUT) -->
 {% block css %}
+<link rel="stylesheet" href="/static/styles/media/layout-media.css">
 <link rel="stylesheet" href="/static/styles/cadastramento.css">
 <link rel="stylesheet" href="/static/styles/media/cadastramento-media.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
