--- a/templates/expedicao.html
+++ b/templates/expedicao.html
@@ -1,6 +1,7 @@
 <!-- EXTENDENDO O CSS DA PAGINA PRINCIPAL (LAYOUT) -->
 {% block css %}
 <link rel="stylesheet" href="/static/styles/expedicao.css">
+<link rel="stylesheet" href="/static/styles/media/layout-media.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
 
 {% endblock %}
