--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block css %}
+<link rel="stylesheet" href="/static/styles/media/layout-media.css">
 <link rel="stylesheet" href="/static/styles/login.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
 {% endblock %}
