--- a/static/styles/expedicao.css
+++ b/static/styles/expedicao.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 
 
-
 body{
     background-color: var(--cor-fundo-pg-funcoes);
 }
@@ -24,7 +23,7 @@ body{
 
 .cadastramento-titulo span{
     font-size: 3.5rem;
-    color: #000000;
+    color: var(--cor-titulo);
     margin-left: 0.5rem;
     opacity: 0.7;
 }
@@ -32,7 +31,7 @@ body{
 .container-img {
     width: 12rem;
     height: 25rem;
-    background: linear-gradient(to bottom , #ff2c84, #ff99a5);
+    background: var( --cor-icone-cadastramento);
     filter: blur(3rem);
     margin-right: 10rem;
     border-radius: 2.5rem;
@@ -123,7 +122,7 @@ body{
     color: var(--cor-fundo-options);
     border: none;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition:  0.3s;
 }
 
 .submit-btn:hover {
