--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -18,7 +18,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #E8D3B6;
   position: fixed;
   left: 0;
   top: 0;
@@ -36,8 +35,8 @@
 
 /* Estilização do botão de dropdown */
 .dropbtn {
-    background-color: #3498DB;
-    color: white;
+    background-color: var(--cor-drop-btn);
+    color: var(--cor-padrao-letras);
     padding: 16px;
     font-size: 16px;
     font-family: "Bebas Neue", sans-serif;
@@ -50,7 +49,7 @@
   }
   
   .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
+    background-color: var(--cor-drop-btn);
   }
   
   .dropdown {
@@ -61,23 +60,23 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
+    background-color: var(--cor-drop);
+    min-width: 8rem;
     overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0rem 4rem 6rem 0rem var(--cor-sombra-drop);
     z-index: 1;
     margin-right: 1rem;
     right: 0;
   }
   
   .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    color: var(--cor-drop-letras);
+    padding: 0.8rem 1rem;
     text-decoration: none;
     display: block;
   }
   
-  .dropdown a:hover {background-color: #ddd;}
+  .dropdown a:hover {background-color:var(--cor-drop-hover);}
   
   .show {
     display: block;
@@ -90,15 +89,12 @@
 footer{
     width: 100vw;
     height: 4vh;
-    background-color: #000000;
+    background-color: var(--cor-footer);
     position: fixed;
     bottom: 0;
     left: 0;
-    color: #ffffff;
-    /* text-align: center; */
+    color:var(--cor-padrao-letras);
     display: flex;
-    /* justify-content: center;
-    align-items: center; */
 }
 
 footer p{
