--- a/static/styles/pagina-inicial.css
+++ b/static/styles/pagina-inicial.css
@@ -26,7 +26,7 @@ body, html {
 
 .titulo-destaque .part1 {
   font-size: 7rem;
-  color: #6a00c2;
+  color: var(--cor-titulo1-pgInicial);
   margin-right: 5px;
   opacity: 0.7;
   font-family: "Unlock", serif;
@@ -36,7 +36,7 @@ body, html {
 
 .titulo-destaque .part2 {
   font-size: 7rem;
-  color: #0071c2;
+  color: var(--cor-titulo2-pgInicial);
   font-family: "Unlock", serif;
   font-weight: 400;
   font-style: normal;
@@ -53,7 +53,7 @@ body, html {
 
 .container-cards{
 
-  background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(53, 51, 205, 1) 3%, rgba(53, 51, 205, 1) 97%, rgba(255,255,255,1) 100%);
+  /* background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(53, 51, 205, 1) 3%, rgba(53, 51, 205, 1) 97%, rgba(255,255,255,1) 100%); */
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -149,32 +149,6 @@ body, html {
   width: 100%;
 }
 
-.descricao h2{
-  font-family: 'Courier New', Courier, monospace;
-  /*DEFINE O TAMANHO DA FONTE*/
-  font-size: 2rem;
-  color: var(--cor-padrao-letras);
-  margin-top: 0.5rem;
- 
-}
-
-
-.butn a{
-  font-family: 'Courier New', Courier, monospace;
-  width:10rem;
-  height:2rem;
-  transition: 1.5s;
-  /*QUANDO PASSAR O MOUSE NO BOTÃO MUDO O FORMATO DO PONTEIRO DO MESMO*/
-  cursor: pointer;
-  background-color: transparent;
-  border: 0.1rem solid #fff;
-  color: var(--cor-padrao-letras);
-  /*TRANSFORMA O TEXTO EM LETRA MAÍUSCULA*/
-  text-transform: uppercase;
-  border-radius: 2.5rem;
-  padding: 0.5rem;
-}
-
 
 .container-mensagem_professor{
   height: 100vh;
@@ -194,7 +168,7 @@ body, html {
 }
 
 .mensagem h2{
-  color:var(--cor-padrao-letras);
+  color:var(--cor-msg-professor);
   font-size: 50;
   font-family: "Julius Sans One", sans-serif;
   font-weight: 400;
@@ -207,6 +181,6 @@ body, html {
   margin-top: 3rem;
   text-align: center;
   border-radius: 2rem;
-  background-color:hsl(217, 100%, 90%) ;
-  color: #000000;
+  background-color:var(--cor-card-mensagem);
+  color: var(--cor-msg-professor);
 }
