--- a/static/styles/picking.css
+++ b/static/styles/picking.css
@@ -24,9 +24,9 @@ body{
 
 .cadastramento-titulo span{
     font-size: 3.5rem;
-    color: #000000;
     margin-left: 0.5rem;
     opacity: 0.7;
+    color: var(--cor-titulo);
 }
 
 .container-img {
