--- a/static/styles/rnc.css
+++ b/static/styles/rnc.css
@@ -112,6 +112,7 @@ body{
 .option {
     padding: 10px;
     cursor: pointer;
+    
 }
 
 .option:hover {
@@ -123,7 +124,7 @@ body{
     color: var(--cor-fundo-options);
     border: none;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: 0.3s;
 }
 
 .submit-btn:hover {
