--- a/static/styles/variaveis.css
+++ b/static/styles/variaveis.css
@@ -3,14 +3,25 @@
     /* Cores padrões de Letras  */
     --cor-padrao-letras:#ffffff;
 
+    /* Cores do cabecalho */
+    --cor-drop-btn:#2980B9;
+    --cor-drop:#f1f1f1;
+    --cor-drop-letras:black;
+    --cor-drop-hover: #ddd;
+    --cor-sombra-drop:rgba(0,0,0,0.2);
+    
+    
+    /* Cores do footer */
+    --cor-footer:#000000;
 
+    
     /* Cores da página inicial */
     --cor-pagina-inicial:rgba(255,255,255,1);
     --cor-titulo1-pgInicial:#6a00c2;
     --cor-titulo2-pgInicial:#0071c2;
-    
-    --cor-servicos-hover: rgba(83, 103, 156, 0.292);
-    --cor-card-mensagem:#87b7ff;
+    --cor-msg-professor:#000000;
+    --cor-card-mensagem:hsl(217, 100%, 90%) ;
+
 
     /* Cores do login */
     --cor-fundo-login:linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(53,51,205,1) 100%);
@@ -19,11 +30,8 @@
     --cor-fundo-inputs:#003772;
 
 
-    /* Cores do footer */
-    --cor-dpop-btn:#3498DB;
-    --cor-footer:#000000;
-
     /* Cores das páginas de funcionais */
+    --cor-titulos:#000;
     --cor-fundo-pg-funcoes:#e5e5e5;
     --cor-bordas: #ccc;
     --cor-fundo-formularios:#f9f9f9;
@@ -35,13 +43,5 @@
     /* Cor do icone de Cadastramento */
     --cor-icone-cadastramento:linear-gradient(to bottom , #ff2c84, #ff99a5);
 
-    /*  */
 
-    /*  */
-
-    /*  */
-
-    /*  */
-
-    /*  */
 }
