--- a/templates/picking.html
+++ b/templates/picking.html
@@ -2,6 +2,7 @@
 {% block css %}
 <link rel="stylesheet" href="/static/styles/picking.css">
 <link rel="stylesheet" href="/static/styles/media/picking-media.css">
+<link rel="stylesheet" href="/static/styles/media/layout-media.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
 
 {% endblock %}
