--- a/templates/rnc.html
+++ b/templates/rnc.html
@@ -2,6 +2,7 @@
 {% block css %}
 <link rel="stylesheet" href="/static/styles/rnc.css">
 <link rel="stylesheet" href="/static/styles/media/rnc-media.css">
+<link rel="stylesheet" href="/static/styles/media/layout-media.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
 
 {% endblock %}
