--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
      <link rel="stylesheet" href="/static/styles/media/layout-media.css">
      <link rel="stylesheet" href="/static/styles/variaveis.css">
 
+     <script src="https://kit.fontawesome.com/cbfeaec436.js" crossorigin="anonymous"></script>
     
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,16 +49,41 @@
                 <div class="dropdown">
                     <button onclick="myFunction()" class="dropbtn">Menu</button>
                     <div id="myDropdown" class="dropdown-content">
-                      <a href="/">Home</a>
-                      <a href="/login">Conecte-se</a>
-                      <a href="/cadastramento">Cadastramento</a>
-                      <a href="/rnc">RNC</a>
-                      <a href="/picking">Cadastro de Picking</a>
-                      <a href="/estoque">Controle de Estoque</a>
-                      <a href="/pop">POP</a>
-                      <a href="/expedicao">Cadastro de Expedição</a>
-                    </div>
+                        <div class="dropdown-menu">
+                            <div class="card">
+                                <a href="/"><i class="fas fa-home"></i> Home</a>
+                            </div>
+
+                            <div class="card">
+                                <a href="/login"><i class="fa-solid fa-users"></i> Conecte-se</a>
+                            </div>
+
+                            <div class="card">
+                                <a href="/cadastramento">Cadastramento</a>
+                            </div>
+
+                            <div class="card">
+                                <a href="/rnc">RNC</a>
+                            </div>
+
+                            <div class="card">
+                                <a href="/picking">Cadastro de Picking</a>
+                            </div>
+
+                            <div class="card">
+                                <a href="/estoque">Controle de Estoque</a>
+                            </div>
+
+                            <div class="card">
+                                <a href="/pop">POP</a>
+                            </div>
+
+                            <div class="card">
+                                <a href="/expedicao">Cadastro de Expedição</a>
+                            </div>
+                        </div>
                   </div>
+                </div>
                 <!-- Fim do menu dropdown -->
             </nav>
             <!-- Fim da navegação principal -->
