--- a/templates/rnc.html
+++ b/templates/rnc.html
@@ -26,6 +26,25 @@
         <div class="container-img"></div>
     </div>
 
+    <div class="container-tabela">
+        <h1>Produtos Cadastrados</h1>
+        <table id="produtos-tabela">
+            <thead>
+                <tr>
+                    <th>Código</th>
+                    <th>Descrição</th>
+                    <th>Modelo</th>
+                    <th>Fabricante</th>
+                    <th>Número do Lote</th>
+                    <th>Endereçamento</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Produtos serão exibidos aqui -->
+            </tbody>
+        </table>
+    </div>
+
 
     <div class="formulario">
 
@@ -66,6 +85,8 @@
     </div>
     
 </section>
+
+<script src="/static/js/tabela-produtos.js"></script>
 
 
 {% endblock %}
