--- a/static/styles/expedicao.css
+++ b/static/styles/expedicao.css
@@ -128,3 +128,19 @@ body{
 .submit-btn:hover {
     background-color: var(--cor-hover-btn-enviar);
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+table, th, td {
+    border: 1px solid black;
+}
+th, td {
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: #f2f2f2;
+}
