--- a/templates/estoque.html
+++ b/templates/estoque.html
@@ -19,6 +19,25 @@
             <div class="container-img"></div>
         </section>
     
+        <div class="container-tabela">
+            <h1>Produtos Cadastrados</h1>
+            <table id="produtos-tabela">
+                <thead>
+                    <tr>
+                        <th>Código</th>
+                        <th>Descrição</th>
+                        <th>Modelo</th>
+                        <th>Fabricante</th>
+                        <th>Número do Lote</th>
+                        <th>Endereçamento</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Produtos serão exibidos aqui -->
+                </tbody>
+            </table>
+        </div>
+
     <!-- Section 02. Formulário do CONTROLE DE ESTOQUE
     Section que contém o formulário composto por inputs. Foi utilizado "number" para os dados numéricos, "text" para dados escritos e "date" para datas. Na descrição técnica, optamos por textarea
     porque facilita a inserção de textos extensos. -->
@@ -56,5 +75,7 @@
         </section>
 
     </section>
+
+<script src="/static/js/tabela-produtos.js"></script>
 
 {% endblock %}
