RF013 tentativa mal sucedida

--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -103,7 +103,7 @@
         <div class="mensagem">
             <h2> Mensagem do Professor </h2>
             <!-- Campo "Mensagem" -->
-            <input type="text" placeholder="Mensagem do Professor" class="input-field">
+            <input type="text" placeholder="Mensagem do Professor" class="input-field" name="mensagem">
         </div>
 
     </div>
