--- a/templates/login.html
+++ b/templates/login.html
@@ -39,11 +39,11 @@
             <input type="email" placeholder="E-mail" required name="email">
             <input type="password" placeholder="Senha" required name="senha">
             <input list="browsers" name="turma" placeholder="Turma">
+            {% for nomeBD in lista_nomes %}
             <datalist id="browsers">
-            <option value="turma1"></option>
-            <option value="turma2"></option>
-            <option value="turma3"></option>
-        </datalist>
+            <option value="{{nomeBD['database']}}"></option>
+            </datalist>
+            {% endfor %}
             <button type="submit">IR</button>
             <a href="#" id="voltar-register" class="voltar-btn">VOLTAR</a>
         </form>
@@ -78,11 +78,11 @@
             <input type="email" placeholder="E-mail" required name="email">
             <input type="password" placeholder="Senha" required name="senha">
             <input list="browsers" name="turma" placeholder="Turma">
+            {% for nomeBD in lista_nomes %}
             <datalist id="browsers">
-            <option value="turma1"></option>
-            <option value="turma2"></option>
-            <option value="turma3"></option>
+            <option value="{{nomeBD['database']}}"></option>
             </datalist>
+            {% endfor %}
             <button type="submit">IR</button>
             <a href="#" id="voltar-login" class="voltar-btn">VOLTAR</a>
         </form>
